# readosm

./: CMakeLists.txt  Doxyfile.in  Makefile.am  Makefile.in  README  config-msvc.h  configure  configure.ac  mainpage.doxy  makefile.vc  makefile64.vc  nmake64.opt  readosm.pc.in
cmake/: Findexpat.cmake  ReadOSMConfig.cmake.in
examples/: Makefile.in  examples.doxy  test_osm1.c  test_osm2.c  test_osm3.c
headers/: Makefile.am  Makefile.in  readosm.h  readosm_internals.h
src/: Makefile.am  Makefile.in  osm_objects.c  osmxml.c  protobuf.c  readosm.c
tests/: CMakeLists.txt  Makefile.am  Makefile.in  check_err.c  check_osm.c  check_pbf.c
